--- a/themes/styles/mediaQueries.css
+++ b/themes/styles/mediaQueries.css
@@ -26,7 +26,7 @@
     }
 
     .esriCTTdHeaderSearch-select {
-        background-image: url("../images/search-select@2X.png") !important;
+        background-image: url("../images/search-select-green.png") !important;
     }
 
     .esriCTTdGeolocation {
@@ -34,7 +34,7 @@
     }
 
     .esriCTImgSocialMedia-select {
-        background-image: url("../images/share-select@2X.png") !important;
+        background-image: url("../images/share-select-green.png") !important;
     }
 
     .esriCTImgSocialMedia {
@@ -45,15 +45,17 @@
         background-image: url("../images/get-route@2x.png") !important;
     }
 
-    .esriCTRouteImg-select {
-        background-image: url("../images/get-route-select@2x.png") !important;
-    }
+
 
     .esriCTTdHeaderSearch, .esriCTTdHeaderSearch-select, .esriCTTdGeolocation, .esriCTImgSocialMedia-select, .esriCTImgSocialMedia, .esriCTRouteImg, .esriCTRouteImg-select, .esriCTHelpImg, .esriCTHelpImg {
         height: 44px !important;
         width: 44px !important;
         background-size: 44px !important;
-        padding: 8px 15px !important;
+        margin: 0px 20px !important;
+    }
+
+    .esriCTApplicationHeaderIcon {
+        padding: 15px 0 2px 15px !important;
     }
 
     .facebook {
@@ -118,7 +120,7 @@
         height: 44px !important;
         width: 44px !important;
         background-size: 44px !important;
-        padding: 8px 15px !important;
+        margin: 8px 15px !important;
     }
 
     .esriCTApplicationHeader {
@@ -167,6 +169,9 @@
     .customButtonInner {
         padding-top: 4px;
     }
+     .esriCTApplicationHeaderIcon {
+       margin: 15px 0px 12px 15px !important;
+    }
 }
 
 @media only screen and (min-width : 768px) and (max-width : 1024px) /*if device wise  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)*/
@@ -207,7 +212,7 @@
         height: 44px !important;
         width: 44px !important;
         background-size: 44px !important;
-        padding: 8px 15px !important;
+        margin: 8px 20px 0px 20px !important;
     }
 
     .esriCTApplicationHeader {
@@ -300,7 +305,7 @@
         height: 44px !important;
         width: 44px !important;
         background-size: 44px !important;
-        padding: 8px 15px !important;
+        margin: 8px 20px !important;
     }
 
     .esriCTApplicationHeader {
@@ -371,7 +376,7 @@
         width: 44px !important;
         background-size: 44px !important;
         width: 20% !important;
-        padding: 8px 0 !important;
+        margin: 8px 0 !important;
     }
 
     .esriCTRightTab {
@@ -463,7 +468,7 @@
         width: 44px !important;
         background-size: 44px !important;
         width: 20% !important;
-        padding: 8px 0 !important;
+        margin: 8px 0 !important;
     }
 
     .esriCTRightTab {
@@ -681,7 +686,7 @@
         width: 44px !important;
         background-size: 44px !important;
         width: 20% !important;
-        padding: 8px 0 !important;
+        margin: 8px 0 !important;
     }
 
     .esriCTApplicationHeaderIcon {
