--- a/widgets/appHeader/templates/appHeaderTemplate.html
+++ b/widgets/appHeader/templates/appHeaderTemplate.html
@@ -1,5 +1,6 @@
 ﻿<div data-dojo-attach-point="applicationHeaderParentContainer">
     <div class="esriCTApplicationHeader">
+         <img data-dojo-attach-point="applicationHeaderIcon" class="esriCTApplicationHeaderIcon" />
         <div data-dojo-attach-point="applicationHeaderName" class="esriCTApplicationHeaderTextTD">
         </div>
         <div data-dojo-attach-point="applicationHeaderWidgetsContainer" class="esriCTRightTab">
